Downgrade z3c.autoinclude to 0.2
svn path=/willdo/trunk/; revision=1265

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,6 +7,9 @@ newest = false
 extends= http://grok.zope.org/releaseinfo/grok-0.12.cfg
 versions = versions
 
+[versions]
+z3c.autoinclude = 0.2
+
 [app]
 recipe = zc.zope3recipes>=0.5.3:application
 eggs = willdo
