Removed hardcoded /home/maurits
svn path=/willdo/trunk/; revision=1268

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 develop = .
 parts = app data zopectl i18n test
 find-links = http://download.zope.org/distribution/
-eggs-directory = /home/maurits/buildout-eggs
+#eggs-directory = /home/maurits/buildout-eggs
 newest = false
 extends= http://grok.zope.org/releaseinfo/grok-0.12.cfg
 versions = versions
