--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,6 @@
 develop = .
 parts = app data zopectl i18n test
 find-links = http://download.zope.org/distribution/
-#eggs-directory = /home/maurits/buildout-eggs
 newest = false
 extends= http://grok.zope.org/releaseinfo/grok-0.12.cfg
 versions = versions
@@ -51,6 +50,7 @@ recipe = zc.recipe.filestorage
 recipe = zc.zope3recipes:instance
 application = app
 zope.conf = ${data:zconfig}
+address = localhost:8080
 
 [test]
 recipe = zc.recipe.testrunner
