--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,7 +28,7 @@ site.zcml = <include package="willdo" />
                          password="admin"
                          />
 
-              <!-- Replace the following directive if you don't want
+              <!-- Replace the following directive if you do not want
                    public access -->
               <grant permission="zope.View"
                      principal="zope.Anybody" />
